--- a/springboot-08-linux/pom.xml
+++ b/springboot-08-linux/pom.xml
@@ -36,6 +36,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
